force-app/main/default/objects/Visit__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Building</fullName>
                <default>true</default>
                <label>Commercial Building</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>