force-app/main/default/objects/Visit__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Properties</fullName>
                <default>true</default>
                <label>Properties</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>