force-app/main/default/objects/Visit__c/fields/Sub__c.field-meta.xml
<CustomField>
    <fullName>Sub__c</fullName>
    <label>Sub-Building</label>
    <length>40</length>
    <type>Text</type>
</CustomField>