force-app/main/default/objects/Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>