force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Agent__c</columns>
    <columns>Asset__c</columns>
    <columns>Building__c</columns>
    <columns>Comments__c</columns>
    <columns>Sub__c</columns>
    <columns>Visit_Type__c</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>